1. Make label and input of checkbox and switch are displayed in one row without grid. 2. Fix confused style variable reactaform-field-gap

--- a/packages/apps/parents-app/src/style.css
+++ b/packages/apps/parents-app/src/style.css
@@ -3,4 +3,5 @@
 	padding: 24px;
 	width: 400px;
 	margin: 0 auto;
+	--reactaform-field-gap: 15px;
 }
